@@ -1,6 +1,11 @@
 LIST OF CHANGES
 ---------------
 
+ - npg_pipeline::function::autoqc
+   - Simplified the flow of the code.
+   - Made clearer logic for choosing QC checks to run, provided comments.
+   - Allowed for running the review QC check on lanes.
+
 release 68.6.0 (2024-10-24)
  - The runfolder_path attribute is passed to the constructor of the review
    autoqc check object when deciding whether this check should run.
